--- a/index.html
+++ b/index.html
@@ -1042,7 +1042,7 @@
   </p>
 
   <p class="skills_text" data-aos="fade-down" data-aos-delay="250">
-    Smart Helmet: Enhancing Driver Safety and Road Accident Detection System
+    Smart Helmet: Enhancing Driver Safety and Alcohol Detection System
     ensures no bike starts under alcohol influence - TECH STACK: C++ and AT Commands
   </p>
 
